lab2 index parte2

--- a/index.html
+++ b/index.html
@@ -9,9 +9,23 @@
 
     <h1>Olá!</h1>
 
-    <<p>Na Unidade Curricular de <a href=""
+    <p>Na Unidade Curricular de <a href="https://moodle.ensinolusofona.pt/course/view.php?id=28717">
+        Desenvolvimento de Interfaces Web</a> abordaremos as seguintes tecnologias web:
+    </p>
+
+    <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>React e Next.js</li>
+    </ul>
+
+    <p>
+        <li><a herf="</li>
+    </p>
+
+
 
 
 </body>
-
 </html>
