--- a/lab2/index.html
+++ b/lab2/index.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<htlm lang=""pt">
+    <head>
+        <meta charset="UTF-8">
+        <title>Atlanta</title>
 
+    </head>
+    <body>
+        <header>
+            <h1>A minha cidade</h1>
+
+        </header>
+        <main>
+            <h2>Home</h2>
+            <p>A minha cidade é muito linda!!!</p>
+
+        </main>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="local.html">Localização</a>
+            <a href="multimedia.html">Multimédia</a>
+            <a href="info.html">Informação</a>
+        </nav>
+        <footer>
+            <p>DIW 2024</p>
+        </footer>
+
+    </body>
+
+</htlm>
