--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     </ul>
 
     <p>
-        <li><a herf="</li>
+        <li><a herf="lab1/index.html"a></li>
+        <li><a href="lab2/index.html"a></li>
     </p>
 
 
