rais do projeto atualização

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     </ul>
 
     <p>
-        <li><a herf=">
+        <li><a href="lab1/report.html">Lab 1</a></li>
+        <li><a href="lab2/index.html">Lab 2</a></li>
     </p>
 
 
