--- a/lab2/index.html
+++ b/lab2/index.html
@@ -10,17 +10,20 @@
             <h1>A minha cidade</h1>
 
         </header>
-        <main>
-            <h2>Home</h2>
-            <p>A minha cidade é muito linda!!!</p>
-
-        </main>
+       
         <nav>
             <a href="index.html">Home</a>
             <a href="local.html">Localização</a>
             <a href="multimedia.html">Multimédia</a>
             <a href="info.html">Informação</a>
         </nav>
+        <p> <a href="images/Atlanta.jpg"></a></p>
+        <main>
+            <h2>Home</h2>
+            <p>A minha cidade é muito linda!!!</p>
+
+        </main>
+
         <footer>
             <p>DIW 2024</p>
         </footer>
