--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
     </ul>
 
     <p>
-        <li><a href="lab1/report.html">Lab 1</a></li>
-        <li><a href="lab2/index.html">Lab 2</a></li>
+        <li><a href="lab1/report.html">Open Lab 1</a> - Conhecer a Internet</li>
+        <li><a href="lab2/index.html"></a></li>
+        <li><a href="lab3/index.html">Lab 3</a></li>
     </p>
 
 
