lab 3 - viagem e quizz

--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
 
     <p>
         <li><a href="lab1/report.html">Open Lab 1</a> - Conhecer a Internet</li>
-        <li><a href="lab2/index.html"></a></li>
-        <li><a href="lab3/index.html">Lab 3</a></li>
+        <li><a href="lab2/index.html">Open Lab2</a> - HTML "A minha Cidade"</li>
+        <li><a href="lab3/index.html">Open Lab 3</a> - Formulários</li>
     </p>
 
-
-
-
 </body>
+<footer>
+    <p>Gonçalo Costa</p>
+    <p>2º Ano de Licenciatura em Enegenharia Informática na Universidade Lusófona</p>
+</footer>
 </html>
