--- a/lab3/local.html
+++ b/lab3/local.html
@@ -16,6 +16,8 @@
             <a href="local.html">Localização</a>
             <a href="multimedia.html">Multimédia</a>
             <a href="info.html">Informação</a>
+            <a href="quizz.html">Quizz</a>
+            <a href="viagem.html">Viagem</a>
         </nav>
         <p> <a href="images/Atlanta.jpg"></a></p>
         <main>
