--- a/lab4/multimedia.html
+++ b/lab4/multimedia.html
@@ -30,14 +30,14 @@
 
             <h3 id="fotografias">Fotografias</h3>
             <p>
-                <a href="imagem1_grande.jpg" target="_blank">
-                    <img src="imagem1_pequena.jpg" alt="Descrição da Imagem 1" width="120" height="80">
+                <a href="images/imagem1_grande.jpg" target="_blank">
+                    <img src="iimages/magem1_pequena.jpg" alt="Descrição da Imagem 1" width="120" height="80">
                 </a>
-                <a href="imagem2_grande.jpg" target="_blank">
-                    <img src="imagem2_pequena.jpg" alt="Descrição da Imagem 2" width="120" height="80">
+                <a href="images/imagem2_grande.jpg" target="_blank">
+                    <img src="images/imagem2_pequena.jpg" alt="Descrição da Imagem 2" width="120" height="80">
                 </a>
-                <a href="imagem3_grande.jpg" target="_blank">
-                    <img src="imagem3_pequena.jpg" alt="Descrição da Imagem 3" width="120" height="80">
+                <a href="images/imagem3_grande.jpg" target="_blank">
+                    <img src="images/imagem3_pequena.jpg" alt="Descrição da Imagem 3" width="120" height="80">
                 </a>
             </p>
             
