--- a/lab4/index.html
+++ b/lab4/index.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <title>Atlanta</title>
+        <link rel="stylesheet" href="styles.css">
 
     </head>
     <body>
         <header>
             <h1>A minha cidade</h1>
-
+            
         </header>
        
         <nav>
