--- a/lab4/index.html
+++ b/lab4/index.html
@@ -2,13 +2,14 @@
 <htlm lang=""pt">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Atlanta</title>
         <link rel="stylesheet" href="styles.css">
 
     </head>
     <body>
         <header>
-            <h1>A minha cidade</h1>
+            <h1>Atlanta</h1>
             
         </header>
        
@@ -23,7 +24,9 @@
         <p> <a href="images/Atlanta.jpg"></a></p>
         <main>
             <h2>Home</h2>
-            <p>A minha cidade é muito linda!!!</p>
+            <p>A melhor cidade para começar uma carreira de Trap!!!
+                Saiba porquê!!!
+            </p>
 
         </main>
 
