--- a/lab4/index.html
+++ b/lab4/index.html
@@ -14,13 +14,17 @@
         </header>
        
         <nav>
-            <a href="index.html">Home</a>
-            <a href="local.html">Localização</a>
-            <a href="multimedia.html">Multimédia</a>
-            <a href="info.html">Informação</a>
-            <a href="quizz.html">Quizz</a>
-            <a href="viagem.html">Viagem</a>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="local.html">Localização</a></li>
+                <li><a href="multimedia.html">Multimédia</a></li>
+                <li><a href="info.html">Informação</a></li>
+                <li><a href="quizz.html">Quizz</a></li>
+                <li><a href="viagem.html">Viagem</a></li>
+            </ul>
         </nav>
+
+        
         <p> <a href="images/Atlanta.jpg"></a></p>
         <main>
             <h2>Home</h2>
