--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <li><a href="lab2/index.html">Open Lab2</a> - HTML "A minha Cidade"</li>
         <li><a href="lab3/index.html">Open Lab 3</a> - Formulários</li>
         <li><a href="lab4/index.html">Open lab 4</a> - Estilo Css</li>
+        <li><a href="lab5/index.html">Open lab 5</a> - Lab 5</li>
     </p>
 
 </body>
