--- a/lab5/pontosinteresse.html
+++ b/lab5/pontosinteresse.html
@@ -35,17 +35,41 @@
 
         <section>
             <h2>Top 5 Restaurantes</h2>
-            <div class="caixa-pequena">Lista ordenada</div>
+            <div class="caixa-pequena">
+                <ol>
+                    <li>Bacchanalia - Restaurante de alta gastronomia, famoso pelos seus menus degustação e ingredientes frescos.</li>
+                    <li>Gunshow - Restaurante inovador com uma abordagem única, onde chefs trazem pratos diretamente à mesa.</li>
+                    <li>Staplehouse - Um dos restaurantes mais populares, conhecido pela sua comida moderna e de temporada.</li>
+                    <li>Aria - Restaurante elegante que oferece pratos clássicos com um toque moderno e ambiente sofisticado.</li>
+                    <li>Busy Bee Cafe - Ícone histórico de Atlanta, conhecido pelos pratos tradicionais do sul dos EUA, como frango frito.</li>
+                </ol>
+            </div>
         </section>
 
         <section>
             <h2>Top 5 Monumentos</h2>
-            <div class="caixa-pequena">Lista ordenada</div>
+            <div class="caixa-pequena">
+                <ol>
+                    <li>Martin Luther King Jr. National Historic Site - Local que celebra a vida e o legado do famoso líder dos direitos civis.</li>
+                    <li>Centennial Olympic Park - Parque que celebra os Jogos Olímpicos de 1996, com belas fontes e áreas verdes.</li>
+                    <li>Georgia State Capitol - Edifício histórico e sede do governo do estado da Geórgia, com tours disponíveis.</li>
+                    <li>Fox Theatre - Monumento cultural que abriga espetáculos e eventos, com uma arquitetura magnífica.</li>
+                    <li>Atlanta History Center - Um museu que conta a história de Atlanta e a sua importância ao longo dos anos.</li>
+                </ol>
+            </div>
         </section>
 
         <section>
             <h2>Locais a não perder</h2>
-            <div class="caixa-pequena">Lista</div>
+            <div class="caixa-pequena">
+                <ul>
+                    <li>Piedmont Park - Um parque icónico para relaxar, fazer piqueniques e apreciar a vista da cidade.</li>
+                    <li>Atlanta Botanical Garden - Jardins espetaculares com uma diversidade incrível de plantas e eventos.</li>
+                    <li>The BeltLine - Uma trilha urbana onde se pode caminhar, andar de bicicleta e explorar lojas e arte local.</li>
+                    <li>High Museum of Art - Museu de arte com uma coleção impressionante, desde arte clássica a contemporânea.</li>
+                    <li>World of Coca-Cola - Museu que conta a história da Coca-Cola, uma das maiores marcas do mundo, com exposições interativas.</li>
+                </ul>
+            </div>
         </section>
 
         <section>
