alteração de cores

--- a/lab5/multimedia.html
+++ b/lab5/multimedia.html
@@ -6,7 +6,7 @@
         <title>Atlanta</title>
         <link rel="stylesheet" href="styles.css">
     </head>
-    <body>
+    <body class="multimedia">
         <header>
             <h1>A minha cidade</h1>
         </header>
@@ -33,14 +33,14 @@
 
             <h3 id="fotografias">Fotografias</h3>
             <p>
-                <a href="images/imagem1_grande.jpg" target="_blank">
-                    <img src="images/imagem1_pequena.jpg" alt="Descrição da Imagem 1" width="120" height="80">
+                <a href="images/atlantaJardim_grande.jpg" target="_blank">
+                    <img src="images/atlantaJardim_pequena.jpg" alt="Descrição da Imagem 1" width="120" height="80">
                 </a>
-                <a href="images/imagem2_grande.jpg" target="_blank">
-                    <img src="images/imagem2_pequena.jpg" alt="Descrição da Imagem 2" width="120" height="80">
+                <a href="images/atlantaNigthLife_grande.jpg" target="_blank">
+                    <img src="images/atlantaNigthLife_pequena.jpg" alt="Descrição da Imagem 2" width="120" height="80">
                 </a>
-                <a href="images/imagem3_grande.jpg" target="_blank">
-                    <img src="images/imagem3_pequena.jpg" alt="Descrição da Imagem 3" width="120" height="80">
+                <a href="images/trapMuseam_grande.jpg" target="_blank">
+                    <img src="images/trapMuseam_pequena.jpg" alt="Descrição da Imagem 3" width="120" height="80">
                 </a>
             </p>
 
