--- a/lab5/pontosinteresse.html
+++ b/lab5/pontosinteresse.html
@@ -6,7 +6,7 @@
     <title>A minha Cidade</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="pontosinteresse">
 
     <!-- Cabeçalho com título -->
     <header>
@@ -74,7 +74,11 @@
 
         <section>
             <h2>Melhor Local para Tirar uma Foto</h2>
-            <div class="caixa-grande">Imagem</div>
+            <div class="caixa-grande">
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.021867632447!2d-84.39187068468172!3d33.761593980688226!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88f5047a7a98b177%3A0x47c35a3771706f3!2sPiedmont%20Park%2C%20Atlanta%2C%20GA%2030316%2C%20EUA!5e0!3m2!1spt-BR!2spt!4v1697746111234!5m2!1spt-BR!2spt" 
+                 width="600" height="450" style="border:0;"></iframe>
+        
+            </div>
         </section>
 
         <section>
