--- a/lab5/multimedia.html
+++ b/lab5/multimedia.html
@@ -8,7 +8,7 @@
     </head>
     <body class="multimedia">
         <header>
-            <h1>A minha cidade</h1>
+            <h1>Atlanta</h1>
         </header>
         
         <nav>
