--- a/lab5/pontosinteresse.html
+++ b/lab5/pontosinteresse.html
@@ -10,7 +10,7 @@
 
     <!-- Cabeçalho com título -->
     <header>
-        <h1>A Minha Cidade</h1>
+        <h1>Atlanta</h1>
     </header>
 
     <!-- Barra de navegação -->
@@ -28,10 +28,32 @@
 
     <!-- Seções principais da página -->
     <main>
-        <section>
+        <section class="pontos-interesse-section">
             <h2>Pontos de Interesse</h2>
-            <div class="caixa-grande">Conteúdo</div>
+            <div class="caixa-grande">
+                <div class="ponto">
+                    <h3>Georgia Aquarium</h3>
+                    <p>O maior aquário do mundo, oferecendo uma experiência única com espécies marinhas, incluindo tubarões-baleia e golfinhos.</p>
+                </div>
+                <div class="ponto">
+                    <h3>World of Coca-Cola</h3>
+                    <p>Uma experiência imersiva na história da Coca-Cola, com exibições interativas e degustações de refrigerantes de todo o mundo.</p>
+                </div>
+                <div class="ponto">
+                    <h3>Martin Luther King Jr. National Historical Park</h3>
+                    <p>Local histórico que homenageia a vida e o legado do líder dos direitos civis Martin Luther King Jr.</p>
+                </div>
+                <div class="ponto">
+                    <h3>Piedmont Park</h3>
+                    <p>Um dos maiores parques da cidade, perfeito para caminhadas, piqueniques e eventos ao ar livre.</p>
+                </div>
+                <div class="ponto">
+                    <h3>Centennial Olympic Park</h3>
+                    <p>Um parque construído para as Olimpíadas de 1996, com fontes dançantes e uma bela vista da cidade.</p>
+                </div>
+            </div>
         </section>
+        
 
         <section>
             <h2>Top 5 Restaurantes</h2>
