--- a/lab5/multimedia.html
+++ b/lab5/multimedia.html
@@ -6,7 +6,7 @@
         <title>Atlanta</title>
         <link rel="stylesheet" href="styles.css">
     </head>
-    <body class="multimedia">
+    <body class="multimedia-page">
         <header>
             <h1>Atlanta</h1>
         </header>
@@ -20,6 +20,7 @@
                 <li><a href="quizz.html">Quizz</a></li>
                 <li><a href="viagem.html">Viagem</a></li>
                 <li><a href="pontosinteresse.html">Pontos de Interesse</a></li>
+                <li><a href="capitais.html">Capitais</a></li>
             </ul>
         </nav>
         
