--- a/lab5/pontosinteresse.html
+++ b/lab5/pontosinteresse.html
@@ -6,7 +6,7 @@
     <title>A minha Cidade</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body class="pontosinteresse">
+<body class="pontos-interesse-page">
 
     <!-- Cabeçalho com título -->
     <header>
@@ -23,6 +23,7 @@
             <li><a href="quizz.html">Quiz</a></li>
             <li><a href="viagem.html">Viagem</a></li>
             <li><a href="pontosinteresse.html">Pontos de Interesse</a></li>
+            <li><a href="capitais.html">Capitais</a></li>
         </ul>
     </nav>
 
@@ -105,8 +106,64 @@
 
         <section>
             <h2>Melhor Altura para Visitar</h2>
-            <div class="caixa-pequena">Tabela</div>
+            <div class="caixa-pequena">
+                <table class="tabela-meses">
+                    <tr>
+                        <th>Mês</th>
+                        <th>Ranking</th>
+                    </tr>
+                    <tr>
+                        <td>Janeiro</td>
+                        <td>1</td>
+                    </tr>
+                    <tr>
+                        <td>Fevereiro</td>
+                        <td>2</td>
+                    </tr>
+                    <tr>
+                        <td>Março</td>
+                        <td>6</td>
+                    </tr>
+                    <tr>
+                        <td>Abril</td>
+                        <td>10</td>
+                    </tr>
+                    <tr>
+                        <td>Maio</td>
+                        <td>9</td>
+                    </tr>
+                    <tr>
+                        <td>Junho</td>
+                        <td>5</td>
+                    </tr>
+                    <tr>
+                        <td>Julho</td>
+                        <td>4</td>
+                    </tr>
+                    <tr>
+                        <td>Agosto</td>
+                        <td>3</td>
+                    </tr>
+                    <tr>
+                        <td>Setembro</td>
+                        <td>7</td>
+                    </tr>
+                    <tr>
+                        <td>Outubro</td>
+                        <td>8</td>
+                    </tr>
+                    <tr>
+                        <td>Novembro</td>
+                        <td>2</td>
+                    </tr>
+                    <tr>
+                        <td>Dezembro</td>
+                        <td>1</td>
+                    </tr>
+                </table>
+            </div>
         </section>
+        
     </main>
 
     <!-- Rodapé -->
