--- a/lab5/viagem.html
+++ b/lab5/viagem.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="styles.css">
 
     </head>
-    <body>
+    <body class="viagem-page">
         <header>
             <h1>Atlanta</h1>
 
@@ -22,6 +22,7 @@
                 <li><a href="quizz.html">Quizz</a></li>
                 <li><a href="viagem.html">Viagem</a></li>
                 <li><a href="pontosinteresse.html">Pontos de Interesse</a></li>
+                <li><a href="capitais.html">Capitais</a></li>
             </ul>
         </nav>
         
