--- a/lab5/index.html
+++ b/lab5/index.html
@@ -33,6 +33,10 @@
             <p>A melhor cidade para começar uma carreira de Trap!!!
                 Saiba porquê!!!
             </p>
+            <p>
+                Atlanta é uma cidade cheia de cultura e inovação. Além de ser o berço de muitos artistas do hip-hop, a cidade é conhecida por sua contribuição ao movimento dos direitos civis. Se quiser saber mais sobre a cidade, visite a <a href="https://pt.wikipedia.org/wiki/Atlanta" target="_blank">página da Wikipédia</a> sobre Atlanta. 
+                Atlanta é uma cidade com uma <b>história rica</b> e é reconhecida por sua importância no desenvolvimento dos EUA. <i>Ela continua a evoluir culturalmente e economicamente</i> a cada ano.
+            </p>
 
         </main>
 
