--- a/lab5/local.html
+++ b/lab5/local.html
@@ -35,7 +35,7 @@
                 A cidade é um importante centro econômico e cultural, conhecida por seu papel crucial na história dos direitos civis.
             </p>
 
-            <iframe src="<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13894.074039096151!2d-84.40134432173423!3d33.76945449196977!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2spt!4v1727344795701!5m2!1spt-BR!2spt" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d106135.5575189283!2d-84.50253114992935!3d33.7674828294951!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88f5045d6993098d%3A0x66fede2f990b630b!2sAtlanta%2C%20GA%2C%20EUA!5e0!3m2!1spt-PT!2spt!4v1729617158331!5m2!1spt-PT!2spt" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"
 
         </main>
 
