--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Desenvolvimento de Interfaces Web!</title>
+    <title>GoncaloCosta</title>
 </head>
 
 <body cz-shortcut-listen='true'>
