--- a/lab5/multimedia.html
+++ b/lab5/multimedia.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Atlanta</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     </head>
     <body class="multimedia-page">
         <header>
@@ -13,14 +14,14 @@
         
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="local.html">Localização</a></li>
-                <li><a href="multimedia.html">Multimédia</a></li>
-                <li><a href="info.html">Informação</a></li>
-                <li><a href="quizz.html">Quizz</a></li>
-                <li><a href="viagem.html">Viagem</a></li>
-                <li><a href="pontosinteresse.html">Pontos de Interesse</a></li>
-                <li><a href="capitais.html">Capitais</a></li>
+                <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+                <li><a href="local.html"><i class="fas fa-map-marker-alt"></i> Localização</a></li>
+                <li><a href="multimedia.html"><i class="fas fa-photo-video"></i> Multimédia</a></li>
+                <li><a href="info.html"><i class="fas fa-info-circle"></i> Informação</a></li>
+                <li><a href="quizz.html"><i class="fas fa-question-circle"></i> Quizz</a></li>
+                <li><a href="viagem.html"><i class="fas fa-plane"></i> Viagem</a></li>
+                <li><a href="pontosinteresse.html"><i class="fas fa-landmark"></i> Pontos de Interesse</a></li>
+                <li><a href="capitais.html"><i class="fas fa-globe"></i> Capitais</a></li>
             </ul>
         </nav>
         
