--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <li><a href="lab3/index.html">Open Lab 3</a> - Formulários</li>
         <li><a href="lab4/index.html">Open lab 4</a> - Estilo Css</li>
         <li><a href="lab5/index.html">Open lab 5</a> - Lab 5</li>
+        <li><a href="lab6/index.html">Open lab 6</a> - Lab 6</li>
     </p>
 
 </body>
