--- a/lab6/local.html
+++ b/lab6/local.html
@@ -6,6 +6,7 @@
         <title>Atlanta</title>
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+        <link rel="stylesheet" href="responsive.css">
 
     </head>
     <body class="local-page">
@@ -39,6 +40,11 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d106135.5575189283!2d-84.50253114992935!3d33.7674828294951!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88f5045d6993098d%3A0x66fede2f990b630b!2sAtlanta%2C%20GA%2C%20EUA!5e0!3m2!1spt-PT!2spt!4v1729617158331!5m2!1spt-PT!2spt" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"
 
         </main>
+
+        <aside>
+            <img src="images/atlanta_night_aside.jpg" alt="City View">
+        <img src="images/atlanta_garden_aside.jpg" alt="Garden">
+        </aside>
 
         <footer>
             <p>DIW 2024</p>
