--- a/lab6/multimedia.html
+++ b/lab6/multimedia.html
@@ -6,6 +6,7 @@
         <title>Atlanta</title>
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+        <link rel="stylesheet" href="responsive.css">
     </head>
     <body class="multimedia-page">
         <header>
@@ -63,6 +64,11 @@ Atlanta, que nunca para de sonhar.
             </pre>
 
         </main>
+
+        <aside>
+            <img src="images/atlanta_night_aside.jpg" alt="City View">
+        <img src="images/atlanta_garden_aside.jpg" alt="Garden">
+        </aside>
 
         <footer>
             <p>DIW 2024</p>
