--- a/lab6/pontosinteresse.html
+++ b/lab6/pontosinteresse.html
@@ -6,6 +6,7 @@
     <title>A minha Cidade</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="responsive.css">
 </head>
 <body class="pontos-interesse-page">
 
@@ -166,6 +167,11 @@
         </section>
         
     </main>
+
+    <aside>
+        <img src="images/atlanta_night_aside.jpg" alt="City View">
+    <img src="images/atlanta_garden_aside.jpg" alt="Garden">
+    </aside>
 
     <!-- Rodapé -->
     <footer>
