--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <li><a href="lab4/index.html">Open lab 4</a> - Estilo Css</li>
         <li><a href="lab5/index.html">Open lab 5</a> - Lab 5</li>
         <li><a href="lab6/index.html">Open lab 6</a> - Lab 6</li>
+        <li><a href="lab7/index.html">Open lab 7</a> - Lab 7</li>
     </p>
 
 </body>
