--- a/lab7/index.html
+++ b/lab7/index.html
@@ -32,8 +32,7 @@
     </div>
 
     <div>
-        <p>5. Conta!</p>
-        <button onclick="count()"></button>
+        <p>5. <button onclick="count()">Conta!</button> Conta!</p>
         <span id="countDisplay">0</span>
     </div>
 
