--- a/lab7/index.html
+++ b/lab7/index.html
@@ -6,7 +6,7 @@
     <title>Eventos</title>
     
 </head>
-<body>
+<body id="colorbox">
     <h1>Eventos</h1>
     <div>
         <p>1. Passa por aqui!</p>
